# nextcloud-micos-export

./: .gitignore  .gitmodules  .space.kts  FileNameModels.py  README.md  Settings.py  add_user.sql  ddg_micos_export.py  install.sh  main.py  nextcloud_micos_export.py  nextcloud_micos_export.service  nextcloudmicosexport.service  nextcloudmicosexport.sh  nextcloudmicosexport_settings.sh  pyproject.toml  requirements.txt  settings.json  setup.py  uninstall.sh
.github/workflows/: build_and_publish.yml
src/nextcloud_micos_export/: FileNameModels.py  Settings.py  __init__.py  __main__.py  settings.py
src/nextcloudmicosexport/: FileNameModels.py  Settings.py  __init__.py  __main__.py
